# nostr-cli

./: Cargo.toml  justfile  rust-toolchain.toml
src/: main.rs
src/cli/: mod.rs
